force-app/main/default/objects/Levy__c/Levy__c.object-meta.xml
<CustomObject>
    <description>Levy object is created to track levies. The levy object is a child of Judgement object and cannot have an independent record.</description>
    <label>Levy</label>
    <nameField>
        <displayFormat>LVY-{000000}</displayFormat>
        <label>Levy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>