force-app/main/default/objects/Levy__c/fields/Claim_of_Exemption_Third_Party_Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim_of_Exemption_Third_Party_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required when Claim of Exemption Filed or Third Party Claim Filed is TRUE, on Record Types SB588 or Sheriff&#39;s Levy.</inlineHelpText>
    <label>Claim of Exemption/Third Party Claim</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Levy__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Claim of Exemption/Third-Party Claim</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Levy__c</referenceTo>
    <relationshipLabel>Levies (Claim of Exemption/Third Party Claim)</relationshipLabel>
    <relationshipName>Levies</relationshipName>
    <type>Lookup</type>
</CustomField>