force-app/main/default/objects/Levy__c/fields/Date_Determined__c.field-meta.xml
<CustomField>
    <fullName>Date_Determined__c</fullName>
    <label>Date Determined</label>
    <type>Date</type>
</CustomField>