force-app/main/default/objects/Levy__c/fields/Date_Issued_by_DLSE__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued_by_DLSE__c</fullName>
    <inlineHelpText>Date signed by issuing Deputy/IRR</inlineHelpText>
    <label>Date Issued by DLSE</label>
    <type>Date</type>
</CustomField>