force-app/main/default/objects/Levy__c/fields/Date_Opposition_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Opposition_Due__c</fullName>
    <label>Date Opposition Due</label>
    <type>Date</type>
</CustomField>