force-app/main/default/objects/Levy__c/fields/Date_Opposition_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Opposition_Filed__c</fullName>
    <label>Date Opposition Filed</label>
    <type>Date</type>
</CustomField>