force-app/main/default/objects/Levy__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>Amount in general Levy object records</description>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>