force-app/main/default/objects/Levy__c/fields/Date_Response_Due_from_Garnishee__c.field-meta.xml
<CustomField>
    <fullName>Date_Response_Due_from_Garnishee__c</fullName>
    <description>Default value = Garnishee Date Issued + 15 days</description>
    <inlineHelpText>Defaults to 15 days from the Date Issued by DLSE</inlineHelpText>
    <label>Date Response Due from Garnishee</label>
    <type>Date</type>
</CustomField>