force-app/main/default/objects/Levy__c/fields/Determination_outcome__c.field-meta.xml
<CustomField>
    <fullName>Determination_outcome__c</fullName>
    <label>Determination/outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Sustained/Upheld</fullName>
            </value>
            <value>
                <fullName>Sustained/Upheld in part with explanation in Notes</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>