force-app/main/default/objects/Levy__c/fields/Exemption_Third_Party_Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Third_Party_Claim_Status__c</fullName>
    <label>Exemption/Third Party Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Sustained</fullName>
            </value>
            <value>
                <fullName>Overruled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>