force-app/main/default/objects/Levy__c/fields/File_Levy_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Levy_Number__c</fullName>
    <description>Levy number, which assigns the parents number by default for all it&#39;s child levies</description>
    <label>File/Levy Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>