force-app/main/default/objects/Levy__c/fields/Garnishee__c.field-meta.xml
<CustomField>
    <fullName>Garnishee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garnishee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Garnishee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipLabel>Levies</relationshipLabel>
    <relationshipName>Levies</relationshipName>
    <type>Lookup</type>
</CustomField>