force-app/main/default/objects/Levy__c/fields/Hearing__c.field-meta.xml
<CustomField>
    <fullName>Hearing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup reference to Meeting Object</description>
    <label>Hearing</label>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipLabel>Levies</relationshipLabel>
    <relationshipName>Levies</relationshipName>
    <type>Lookup</type>
</CustomField>