force-app/main/default/objects/Levy__c/fields/Issuing_Office__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to DIR Office assigned to Levy</description>
    <label>Issuing Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Levies (Issuing Office)</relationshipLabel>
    <relationshipName>Levies1</relationshipName>
    <type>Lookup</type>
</CustomField>