force-app/main/default/objects/Levy__c/fields/Levy_Released__c.field-meta.xml
<CustomField>
    <fullName>Levy_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Levy Released</label>
    <type>Checkbox</type>
</CustomField>