force-app/main/default/objects/Levy__c/fields/Levy_Response__c.field-meta.xml
<CustomField>
    <fullName>Levy_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Levy Objects of record type = &quot;Levy Response&quot;</description>
    <label>Levy Response</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Levy Response</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Levy__c</referenceTo>
    <relationshipLabel>Levies (Levy Response)</relationshipLabel>
    <relationshipName>Levies2</relationshipName>
    <type>Lookup</type>
</CustomField>