force-app/main/default/objects/Levy__c/fields/Levy_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Levy_Response_Type__c</fullName>
    <label>Levy Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Memorandum of Garnishee</fullName>
            </value>
            <value>
                <fullName>Memorandum of Garnishee with Notice of Joint Accountholder</fullName>
            </value>
            <value>
                <fullName>Other Garnishee Response</fullName>
            </value>
            <value>
                <fullName>Claim of Exemption</fullName>
            </value>
            <value>
                <fullName>Third Party Claim</fullName>
            </value>
            <value>
                <fullName>Other Debtor Response</fullName>
            </value>
            <value>
                <fullName>Other Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>