force-app/main/default/objects/Levy__c/fields/Levy_Status__c.field-meta.xml
<CustomField>
    <fullName>Levy_Status__c</fullName>
    <label>Levy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft/pending review</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Sent to levying officer</fullName>
            </value>
            <value>
                <fullName>Withdrawn/released</fullName>
            </value>
            <value>
                <fullName>Served by levying officer</fullName>
            </value>
            <value>
                <fullName>Pending review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Packaged documents ready</fullName>
            </value>
            <value>
                <fullName>Served</fullName>
            </value>
            <value>
                <fullName>Withdrawn (cancelled/not served)</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>On hold-bankruptcy</fullName>
            </value>
            <value>
                <fullName>On hold - other</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>