force-app/main/default/objects/Levy__c/fields/Levy_Type__c.field-meta.xml
<CustomField>
    <fullName>Levy_Type__c</fullName>
    <label>Levy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Garnishment</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable Garnishment</fullName>
            </value>
            <value>
                <fullName>Rents Garnishment</fullName>
            </value>
            <value>
                <fullName>Wage Garnishment</fullName>
            </value>
            <value>
                <fullName>Other Garnishment</fullName>
            </value>
            <value>
                <fullName>Till Tap</fullName>
            </value>
            <value>
                <fullName>Keeper</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Other Personal Property (e.g., jewelry, paintings)</fullName>
            </value>
            <value>
                <fullName>Real Estate – Residential Investment</fullName>
            </value>
            <value>
                <fullName>Real Estate – Residential Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Real Estate – Commercial Properties</fullName>
            </value>
            <value>
                <fullName>Real Estate -- Other</fullName>
            </value>
            <value>
                <fullName>Stocks</fullName>
            </value>
            <value>
                <fullName>Legal Claim</fullName>
            </value>
            <value>
                <fullName>Annuity/Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>