force-app/main/default/objects/Levy__c/fields/No_Account_Asset_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Account_Asset_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Account/Asset Found</label>
    <type>Checkbox</type>
</CustomField>