force-app/main/default/objects/Levy__c/fields/Outside_Sheriffs_Levying_Officer__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sheriffs_Levying_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside/Sheriffs Levying Officer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Levies (Outside/Sheriffs Levying Officer)</relationshipLabel>
    <relationshipName>Levies1</relationshipName>
    <type>Lookup</type>
</CustomField>