force-app/main/default/objects/Levy__c/fields/Reason_Held__c.field-meta.xml
<CustomField>
    <fullName>Reason_Held__c</fullName>
    <label>Reason Held</label>
    <type>TextArea</type>
</CustomField>