force-app/main/default/objects/Levy__c/fields/RelatedLevies__c.field-meta.xml
<CustomField>
    <fullName>RelatedLevies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Levies that are child of another Levy</description>
    <label>Parent Levy</label>
    <referenceTo>Levy__c</referenceTo>
    <relationshipLabel>Responses, Releases, and Related Levies</relationshipLabel>
    <relationshipName>ChildLevies</relationshipName>
    <type>Lookup</type>
</CustomField>