force-app/main/default/objects/Levy__c/fields/Return_to_Sender__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to Sender</label>
    <type>Checkbox</type>
</CustomField>