force-app/main/default/objects/Levy__c/recordTypes/Levy_Release.recordType-meta.xml
<RecordType>
    <fullName>Levy_Release</fullName>
    <active>true</active>
    <label>Levy Release</label>
</RecordType>