force-app/main/default/objects/Levy__c/recordTypes/Other_Levy.recordType-meta.xml
<RecordType>
    <fullName>Other_Levy</fullName>
    <active>true</active>
    <label>Other Levy</label>
</RecordType>