force-app/main/default/objects/Levy__c/recordTypes/Sheriff_s_Levy.recordType-meta.xml
<RecordType>
    <fullName>Sheriff_s_Levy</fullName>
    <active>true</active>
    <label>Sheriff&#39;s Levy</label>
</RecordType>