force-app/main/default/objects/Levy__c/validationRules/Claim_of_Exemption_Third_Party_Claim.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_of_Exemption_Third_Party_Claim</fullName>
    <active>true</active>
    <description>Claim of Exemption/Third Party Claim is required if
1)Record Type = SB588 AND  (Claim of Exemption Filed field=TRUE OR Third Party Claim Filed field=TRUE)
OR
2)Record Type = Sheriff AND Claim of Exemption Filed field=TRUE</description>
    <errorConditionFormula>OR(AND(RecordType.Name = &quot;SB588 Levy&quot;, OR(Claim_of_Exemption_Filed__c , Third_Party_Claim_Filed__c ), ISBLANK( Claim_of_Exemption_Third_Party_Claim__c )), AND(RecordType.Name = &quot;Sheriff&#39;s Levy&quot;, Claim_of_Exemption_Filed__c,ISBLANK( Claim_of_Exemption_Third_Party_Claim__c )))</errorConditionFormula>
    <errorDisplayField>Claim_of_Exemption_Third_Party_Claim__c</errorDisplayField>
    <errorMessage>Claim of Exemption/Third Party Claim is required when Claim of Exemption Filed field OR Third Party Claim Filed field is TRUE</errorMessage>
</ValidationRule>